// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helptooltips Components renders Connect(AddGroupComponent) correctly 1`] = `
<div>
  <div
    className="tooltip help"
    data-event="click focus"
    data-for="groups-tip"
    data-tip={true}
    id="onboard-5"
    style={
      Object {
        "bottom": "-10px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
  <div
    className="__react_component_tooltip place-bottom type-dark"
    data-id="tooltip"
    id="groups-tip"
  >
    <h3>
      Device groups
    </h3>
    <hr />
    <p>
      It is possible to create groups of devices. Once you have created a group and added one or more devices to it, you can deploy an update to that specific group only.
    </p>
    <p>
      To avoid accidents, Mender only allows a device to be in one group at the time.
    </p>
    <p>
      You can find out additional information about device groups in 
      <a
        href="/help/devices"
        onClick={[Function]}
      >
        the help section
      </a>
      .
    </p>
    <p>
      <a
        className="hidehelp"
        onClick={[Function]}
      >
        Hide all help tips
      </a>
    </p>
  </div>
</div>
`;

exports[`Helptooltips Components renders Connect(AuthButtonComponent) correctly 1`] = `
<div>
  <div
    className="tooltip help"
    data-event="click focus"
    data-for="auth-button-tip"
    data-tip={true}
    id="onboard-4"
    style={
      Object {
        "left": "625px",
        "top": "308px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
  <div
    className="__react_component_tooltip place-bottom type-dark"
    data-id="tooltip"
    id="auth-button-tip"
  >
    <div
      style={
        Object {
          "whiteSpace": "normal",
        }
      }
    >
      <h3>
        Authorize devices
      </h3>
      <hr />
      <p>
        Click this button to view the authentication options for this device. You can decide whether to accept it, reject it, or just dismiss this device for now.
      </p>
      <p>
        You can find out more about connecting different types of devices in 
        <a
          href="/help/get-started"
          onClick={[Function]}
        >
          the help section
        </a>
        .
      </p>
      <p>
        <a
          className="hidehelp"
          onClick={[Function]}
        >
          Hide all help tips
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`Helptooltips Components renders Connect(DeviceSupportTipComponent) correctly 1`] = `
<div>
  <div
    className="tooltip help"
    data-event="click focus"
    data-for="deb-package-tip"
    data-tip={true}
    id="deb-package-help"
    style={
      Object {
        "left": "88%",
        "top": "22%",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
  <div
    className="__react_component_tooltip place-bottom type-dark"
    data-id="tooltip"
    id="deb-package-tip"
  >
    <p>
      The steps in the guide should work on most operating systems in the debian family (e.g. Debian, Ubuntu, Raspberry Pi OS) and devices based on ARMv6 or newer (e.g. Raspberry Pi 2/3/4, Beaglebone). Visit
       
      <a
        href="https://docs.mender.io/overview/device-support"
        rel="noopener noreferrer"
        target="_blank"
      >
        our documentation
      </a>
      for more information about device support.
    </p>
  </div>
</div>
`;

exports[`Helptooltips Components renders Connect(ExpandArtifactComponent) correctly 1`] = `
<div>
  <div
    className="tooltip help"
    data-event="click focus"
    data-for="artifact-expand-tip"
    data-tip={true}
    id="onboard-10"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
  <div
    className="__react_component_tooltip place-bottom type-dark"
    data-id="tooltip"
    id="artifact-expand-tip"
  >
    <h3>
      Device type compatibility
    </h3>
    <hr />
    <p>
      Mender Artifacts have 
      <b>
        Device types compatible
      </b>
       as part of their metadata. All devices report which device type they are, as part of their inventory information. During a deployment, Mender makes sure that a device will only download and install an Artifact it is compatible with.
    </p>
    <p>
      You can click on each Artifact in the Release to expand the row and view more information about it.
    </p>
    <p>
      For more information on how to specify the device type compatibility and other artifact metadata,
       
      <a
        href="https://docs.mender.io/artifact-creation/create-an-artifact"
        rel="noopener noreferrer"
        target="_blank"
      >
        see the documentation
      </a>
      .
    </p>
    <p>
      <a
        className="hidehelp"
        onClick={[Function]}
      >
        Hide all help tips
      </a>
    </p>
  </div>
</div>
`;

exports[`Helptooltips Components renders Connect(ExpandDeviceComponent) correctly 1`] = `
<div>
  <div
    className="tooltip help"
    data-event="click focus"
    data-for="expand-device-tip"
    data-tip={true}
    id="onboard-6"
    style={
      Object {
        "left": "inherit",
        "right": "45px",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
  <div
    className="__react_component_tooltip place-left type-dark"
    data-id="tooltip"
    id="expand-device-tip"
  >
    <h3>
      Device inventory
    </h3>
    <hr />
    <p>
      Mender automatically collects identity and inventory information from connected devices. You can view this information by clicking on a device to expand the row.
    </p>
    <p>
      Which information is collected about devices is fully configurable;
       
      <a
        href="https://docs.mender.io/client-installation/identity"
        rel="noopener noreferrer"
        target="_blank"
      >
        see the documentation for how to configure this
      </a>
      .
    </p>
    <p>
      <a
        className="hidehelp"
        onClick={[Function]}
      >
        Hide all help tips
      </a>
    </p>
  </div>
</div>
`;
